updated IDL to add regional center (local server)