@@ -23,3 +23,7 @@ Generate IDL code
 
     cd src
     ~/src/jacorb-3.9/bin/idl CAQ.idl
+    
+To run the Monitoring station (GUI) you may need to add this VM argument
+
+    --module-path Path to openFX/ JFX --add-modules=javafx.controls,javafx.fxml
